fixed an article

--- a/contents/docs/integrate/identifying-users.mdx
+++ b/contents/docs/integrate/identifying-users.mdx
@@ -9,7 +9,7 @@ PostHog allows you to identify your users with an ID of your choice so you can t
 
 Identifying users is usually done via our libraries, by calling the `identify` method. This method will associate an **anonymous ID** with a distinct ID of your choice. In client libraries, the anonymous ID is stored locally and inferred for you, but in server-side libraries you need to tell PostHog what that anonymous ID is too.
 
-For example, if you identify an user in your website as follows:
+For example, if you identify a user in your website as follows:
 
 ```js
 // posthog-js
